# AI-Powered-Project-Management-

./: README.md  new_req.txt  pyproject.toml
app/: .env  alembic.ini  chatbot.py  config.py  main.py  requirements.txt
app/alembic/: env.py
app/auth/: auth_handler.py
app/data_csvs/: costs.csv  createdummydata.py  ftasks.csv  portfolios.csv  programs.csv  projects.csv  risks.csv  users.csv
app/database/: bots.py  chats.py  costs.py  epics.py  ftasks.py  generatedsqls.py  kpiresults.py  lifecycle.py  msgs.py  originroadmaps.py  portfolios.py  products.py  programs.py  projects.py  releases.py  risks.py  roadmaps.py  sprints.py  steward.py  stories.py  uploadedcsvs.py  userqueries.py  users.py
app/jira/: auth.py
app/models/: __init__.py  baseline.py  bots.py  chats.py  costs.py  epics.py  ftasks.py  generatedsqls.py  kpiresults.py  lifecycle.py  msgs.py  portfolios.py  products.py  programs.py  projects.py  releases.py  rephrasedresponses.py  risks.py  roadmaps.py  sprints.py  steward.py  stories.py  uploadedcsvs.py  userqueries.py  users.py  wbs.py
app/routes/: bots.py  chatbot.py  chats.py  costs.py  epics.py  ftasks.py  generatedsqls.py  kpi.py  kpiresults.py  lifecycle.py  msgs.py  originroadmaps.py  portfolios.py  products.py  programs.py  projects.py  releases.py  risks.py  roadmaps.py  sprints.py  steward.py  stories.py  uploadallcsv.py  uploadedcsvs.py  userqueries.py  users.py
app/schemas/: baseline.py  bots.py  chatbot.py  chats.py  costs.py  epics.py  ftasks.py  generatedsqls.py  kpiresults.py  lifecycle.py  msgs.py  originroadmaps.py  portfolios.py  (+13 more)
(+10 files in other folders)
