[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
pg8000 = "^1.30.4"
pydantic = {extras = ["email"], version = "^2.6.1"}
asyncpg = "^0.29.0"
regex = "^2023.12.25"
requests = "^2.31.0"
pybase64 = "^1.3.2"
httpx = "^0.26.0"
asyncio = "^3.4.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
jpype1 = "^1.5.0"
mpxj = "^12.9.3"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-app = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"